# evtez-demo

./: .gitignore  Cargo.nix  Cargo.toml  MOTIVATION.md  README.md  do  flake.nix
contract/: README.md
contract/src/: errors.mligo  interface.mligo  liquid.mligo  manager.mligo  operator.mligo  permissions.mligo  token.mligo
contract/src/storage/: initial_storage.mligo
indexer/: Cargo.toml
indexer/src/: main.rs
visualizer/: Cargo.toml  index.html  index.js  index.tsx  package-lock.json  package.json  tsconfig.json  webpack.config.js
visualizer/src/: lib.rs
