[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
serde_json = "1"
pretty_env_logger = "0.4"
futures = "0.3"
hyper = "0.14"
anyhow = "1"
tracing = "0.1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["sync", "macros", "rt", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]
