[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
chrono = "0.4.0"
plotters = "0.3.1"
plotters-canvas = "0.3.0"
wasm-bindgen = "0.2.0"
js-sys = "0.3.0"
futures = "0.3.0"
wee_alloc = "0.4.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wasm-bindgen-futures]
version = "0.4.0"
features = ["futures-core-03-stream"]

[dependencies.web-sys]
version = "0.3.0"
features = [
    "HtmlCanvasElement",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "console",
]

[profile.release]
debug = true
lto = true
